--- a/gb/18/11/22/n10868348.md
+++ b/gb/18/11/22/n10868348.md
@@ -1,10 +1,9 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/onzhi266/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/onzhi266/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/onzhi266/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/onzhi266/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>奶奶的小圆子 爷爷的油纸伞</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2018/11/65-01-600x400.jpg" />
-<h6>黑瓦白墙，屋后竹林，门前小河，走过小桥，是大片黄灿灿的油菜花田……（Zhangzhugang／维基百科）
-</h6>
+
+<h6></h6>
 <hr>
 <p>黑瓦白墙，屋后竹林，门前小河，走过小桥，是大片黄灿灿的油菜花田……这是我常梦回却再也找不到的浦东高桥奶奶家。</p>
 <p>那是上世纪70年代初，我五六岁的时候。</p>
@@ -18,7 +17,7 @@
 <p>家里最令我感到神秘的，是墙上相框里爷爷年轻时的照片。一袭青衫的他手执书卷，坐在照相馆山水亭阁的布景前，清雅俊逸，温润如玉，圆镜片后深邃的大眼睛神采焕然。（这是我长大才找出的形容词）当时就觉得真好看，照片中的青年置身于我所不知的陌生遥远世界里，和现在穿蓝工作服、两臂戴袖套的爷爷差别很大，不光是年龄……我驻足呆看良久。</p>
 <p>晚饭后，爷爷常坐在堂屋门口的矮竹椅上编筐篮。他的手艺好，无论是散发着竹子清香的青皮竹篮、竹篓，还是打包带编的黄蓝相间的单肩手提包，都匀实精巧、美观大方。这是亲戚朋友喜欢要的礼物，远在城里的儿女孙辈用它满载着老家的土产美食（高桥松饼、云片糕、竹笋、荸荠、菱角）而归。</p>
 <p>奶奶哄妹妹睡觉，我拿着小凳坐在爷爷旁边。江南的雨细密而绵长，叮咚敲打着屋瓦，汇成小流，顺着屋檐串珠儿似地洒落。爷爷在雨的伴奏下埋头编筐篓，几乎不说话，沉浸在自己听得懂的弦琶琮铮中……我坐闷了，举着晾在门边的褐色油纸伞到院子里转圈儿，爷爷抬头饶有趣味地看着，我转动伞柄，从伞檐飞旋出的雨珠被暖黄的灯光照成千百颗小金豆……</p>
-<figure id="attachment_10868646" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2018/11/584bdf56b140ae354093fc32fd5f47aa.jpg"><img class="wp-image-10868646 size-large" src="https://i.epochtimes.com/assets/uploads/2018/11/584bdf56b140ae354093fc32fd5f47aa-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">四川泸州分水油纸伞（三猎／维基百科）</figcaption></figure>
+<figure id="attachment_10868646" aria-describedby="caption-attachment-10868646" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/11/584bdf56b140ae354093fc32fd5f47aa.jpg"><img class="wp-image-10868646 size-large" src="https://i.epochtimes.com/assets/uploads/2018/11/584bdf56b140ae354093fc32fd5f47aa-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-10868646" class="wp-caption-text">四川泸州分水油纸伞（三猎／维基百科）</figcaption></figure>
 <p>爷爷不仅会编筐篮、写毛笔字，还会噼里啪啦手指如飞地打算盘，他是商行会计，是位兢兢业业、一丝不苟的“账房先生”。奶奶念叨着柴米油盐的支出，亲朋乡邻婚丧嫁娶、祝寿生子的随礼，在一旁拨算盘的爷爷却慢到停下来，钱不够用！两人不由地叹气，大儿子、儿媳下放劳动，困难着呢！二儿子挤在上海岳母家的小阁楼里，还要给两个小儿子攒钱结婚。</p>
 <p>我喜欢那紫葡萄似的算盘珠子，“一上一，二上二，三下五去二……”爷爷手把手教我。乖不到10分钟，我就稀里哗啦地胡拨乱弄。爷爷说，你将来弹琴吧！</p>
 <p>秋天，我和妹妹告别爷爷奶奶，回到父母身边。后来，我学了小提琴，爷爷非常高兴，写信鼓励我，“业精于勤而荒于嬉，行成于思而毁于随。”我上高中时，爷爷还来信讲非功利爱好的妙处：年轻人要活跃，情趣盎然才是生活。人生不易，就算没人懂你，也可“将心事付瑶琴”，解郁畅怀，自得其乐。</p>
@@ -28,67 +27,66 @@
 <p>写字台抽屉里躺着竹笛、砚台、墨、毛笔、钢笔……中间抽屉有字帖，颜真卿的《多宝塔碑》、赵孟頫行书《洛神赋》等，展开一叠宣纸，爷爷的墨迹神闲气定，挺秀贯通。在下层小柜里，我看到了紫珠老算盘、几本山水画册和掉皮缺页的旧书，还有两个变暗发黑的硬皮厚本，A4大小，在整齐的繁体竖排小楷队伍中，穿插点缀着或圆或方的小景。大多是爷爷早年的读书摘录和心得，断断续续跨越好几年。</p>
 <p>爷爷12岁就来到曾祖父工作的上海闸北地区，闸北有中国出版业巨擘——商务印书馆，不仅编印了广受欢迎的民国教科书，而且还在附近开设多所学校，最了不起的是创办了“亚洲第一”的东方图书馆，爷爷在此完成了商校学业并开始工作，还在东方图书馆看了不少书，深受其惠。</p>
 <p>1932年“一·二八”事变，商务印书馆、东方图书馆焚毁于日寇战火。爷爷从此更爱惜书，到处借或尽量买，诗词、散文、唐传奇、《圣经》、画谱……札记写得反而勤了，还增加了听书的感想。老上海茶楼最受欢迎的是评弹，（即用苏州话说书或是加弹奏的说唱艺术）。兴盛到好些舞厅都改成书场，名家大腕除了在有钱人家的堂会演出，还到一家一家的电台播唱，弦琶响档空中来，评弹风靡上海滩。无论是金戈铁马、叱咤风云的豪杰传奇，还是帝王将相、才子佳人的感人故事，都雅俗共赏，深入人心。《三国》、《封神榜》、《英烈》、《隋唐》、《岳传》（全称“说岳全传”，讲岳飞父子抗金的故事）、《七侠五义》、《珍珠塔》、《描金凤》、《杨乃武与小白菜》等传统评弹书目，都让爷爷听得入迷。听书是遍及江南小镇茶馆的休闲方式，是水乡百姓最喜闻乐见的曲艺节目，就连那些大字不识的贩夫走卒、女佣村妇，也在听书中潜移默化地懂得了忠孝节义的做人道理，人们尊称评弹艺人为“说书先生”。</p>
-<figure id="attachment_10868696" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2018/11/Romance_of_the_Three_Kingdoms_3_at_Long_Corridor.jpg"><img class="wp-image-10868696 size-large" src="https://i.epochtimes.com/assets/uploads/2018/11/Romance_of_the_Three_Kingdoms_3_at_Long_Corridor-600x276.jpg" alt="" width="600" b="276" /></a><figcaption class="wp-caption-text">颐和园长廊彩绘中的三国演义故事： 江东赴会（shizhao／维基百科）</figcaption></figure>
+<figure id="attachment_10868696" aria-describedby="caption-attachment-10868696" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/11/Romance_of_the_Three_Kingdoms_3_at_Long_Corridor.jpg"><img class="wp-image-10868696 size-large" src="https://i.epochtimes.com/assets/uploads/2018/11/Romance_of_the_Three_Kingdoms_3_at_Long_Corridor-600x276.jpg" alt="" width="600" b="276" /></a><figcaption id="caption-attachment-10868696" class="wp-caption-text">颐和园长廊彩绘中的三国演义故事： 江东赴会（shizhao／维基百科）</figcaption></figure>
 <p>爷爷当时所享有的教育资源比我在大学里的要丰富，民国时代的爷爷与毛时代的爸爸也很不同。我有一次整理衣柜，无意间看到爸爸年轻时的日记，满篇都是学语录、表忠心、斗私批修的口号……那是被洗脑驯化了的“千人一腔、万众一调”，我很快就合上了。而这封尘已久、有黄斑和霉味的笔记却让我着迷，看着看着，爷爷的音容笑貌就浮现出来。他拙朴天真的简笔画，写意生动，令人莞尔。有黄浦江的帆船、月下竹林、雨中花蕾、胖嘟嘟的幼儿、游鱼、瓜果等等，其中有一页画的是坐在树下弹琵琶的少女，一片片粉色的花瓣飘落在头发、旗袍和地上……右上方是一句唐诗：恻恻轻寒翦翦风，小梅飘雪杏花红。</p>
 <p>1937年淞沪战役（8月13日—11月12日）惨烈，闸北被炸成废墟，日军占领上海。</p>
 <p>23岁的他返乡，半耕半读，娶妻成家。无论怎么艰难，日子还是要过下去，种田的种田，生孩子的生孩子，开茶馆的开茶馆，弦索之声时有耳闻。若碰巧赶上有戏班子来高桥演昆曲或越剧，人们扶老携幼去看戏，像过节一样热闹。</p>
 <p>五年后，爷爷又到上海工作。他脚蹬厚底黑布鞋，身穿米白色夏布长衫，在立领斜襟的第二个盘扣处别着一支钢笔，带着乡下人的质朴笃实启程。虽历经战乱，但他的精神还是清朗舒展的，滋养他的不仅是家庭亲情、衣食薪水，还有诗书礼仪、评弹昆曲和诗情画意……他的文艺气质已像他飘逸的米白长衫一样显而易见了。</p>
 <p>“爷爷的书不会这么少吧？” 我问娘娘（姑姑）——他最疼爱的女儿，“哎，早就烧了！”娘娘讲，“文化大革命时破‘四旧’，我和你小叔都动员他把书烧了，先革自己的命，不要等别人来抄家，惹的祸就大了，他就是不肯。后来他在上海看到有人跳楼自杀、‘评弹皇帝’挨批斗，被‘横扫一切牛鬼蛇神’的阵势吓坏了，回家就把上百本书都烧了。”她告诉我，爷爷病重卧床，给他听收音机里播放的评弹名家唱段，他睁开眼睛望着屋顶，老泪纵横。</p>
 <p>我幼年心目中笑容慈祥的爷爷，其实是不快乐的。1949年后翻天覆地的变化，让热爱艺术的爷爷越来越苦闷，曾经滋养他的文化精华全部被腰斩。不允许商务印书馆编印教材，连文史古籍也不出版了。评弹从1951年就开始了多次“斩尾巴”运动，昆曲、越剧也不能幸免，从禁演传统经典到全面停废，政治粗暴地碾压了一切。千锤百炼的老曲目，战争都摧毁不了的、多少代人传承下来的国粹，从此被割断丢弃。在八个样板戏轮番鼓噪中长大的晚辈眼中，他是个多少有些奇怪的人，跟这个社会现实不搭调，专门爱好些无用过时的东西。传统文人的生活方式和审美情趣，年轻人不懂也不愿听了。在他所珍视的美好再次遭劫——被商业化侵蚀之前，爷爷匆匆走了。</p>
-<figure id="attachment_10868712" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2018/11/1804240846212483-600x400.jpg"><img class="wp-image-10868712 size-large" src="https://i.epochtimes.com/assets/uploads/2018/11/1804240846212483-600x400-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text"><ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E6%B1%9F%E5%8D%97%E6%B0%B4%E4%B9%A1.md#1">江南水乡</a>的粉墙黛瓦(fotolia)</figcaption></figure>
+<figure id="attachment_10868712" aria-describedby="caption-attachment-10868712" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/11/1804240846212483-600x400.jpg"><img class="wp-image-10868712 size-large" src="https://i.epochtimes.com/assets/uploads/2018/11/1804240846212483-600x400-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-10868712" class="wp-caption-text"><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B1%9F%E5%8D%97%E6%B0%B4%E4%B9%A1.md#1">江南水乡</a>的粉墙黛瓦(fotolia)</figcaption></figure>
 <p>高桥早已是保税区，油菜田变成工厂，村舍拆迁，奶奶搬进了楼房，连爸爸都找不到以前的老家了。</p>
 <p>去年，102岁的奶奶离开了人间。妹妹说，再也尝不到那么味美的酒酿小圆子了，现在谁还肯（像奶奶那样）用老笨的土法裹着棉被发酵的？！奶奶是个没读过书的家庭妇女，只要家里还过得去、儿女孙辈都平安，就非常知足、觉得很幸运了。她不想那么多，有一种混沌而简单的快乐。当孙子孙女领着小重孙来祝寿，满脸皱纹的奶奶笑得眼睛眯成一条线，欢喜得也像个小孩子。</p>
 <p>弦琶琮铮，珠落玉盘，吴侬软语，娓娓道来，评弹与小桥流水、粉墙黛瓦的江南融为一体、相得益彰。聆听（上世纪）30、40年代艺人的演唱录音，更能感受到其独特的艺术魅力。清丽柔婉的女声，韵味纯真，令人陶醉。</p>
-<figure id="attachment_7284811" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2013/02/1302082211072320.jpg"><img class="wp-image-7284811 size-large" src="https://i.epochtimes.com/assets/uploads/2013/02/1302082211072320-600x399.jpg" alt="" width="600" b="399" /></a><figcaption class="wp-caption-text">大雪过后，水乡小镇有如一幅中国水墨画。（大纪元资料室）</figcaption></figure>
-<p>浸润在爷爷珍爱的江南雅韵中，那个撑着油纸伞伫立船头的青年就浮现出来，雪花慢悠悠、静悄悄地飘落，水袖轻舞间给<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E5%8F%A4%E9%95%87.md#1">古镇</a>带来别样的韵致，这素净灵秀的水墨画卷太美，雪夜泛舟，悠游于天地的诗画中……@*#</p>
+<figure id="attachment_7284811" aria-describedby="caption-attachment-7284811" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2013/02/1302082211072320.jpg"><img class="wp-image-7284811 size-large" src="https://i.epochtimes.com/assets/uploads/2013/02/1302082211072320-600x399.jpg" alt="" width="600" b="399" /></a><figcaption id="caption-attachment-7284811" class="wp-caption-text">大雪过后，水乡小镇有如一幅中国水墨画。（大纪元资料室）</figcaption></figure>
+<p>浸润在爷爷珍爱的江南雅韵中，那个撑着油纸伞伫立船头的青年就浮现出来，雪花慢悠悠、静悄悄地飘落，水袖轻舞间给<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%8F%A4%E9%95%87.md#1">古镇</a>带来别样的韵致，这素净灵秀的水墨画卷太美，雪夜泛舟，悠游于天地的诗画中……@*#</p>
 <p>责任编辑：李婧铖</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/15/7/18/n4483233.md#1">沉静:张充和的古典余韵</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/16/5/6/n7809092.md#1">沉静：粉墙黛瓦 远逝的老屋（上）</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/16/5/6/n7821474.md#1">沉静：粉墙黛瓦 远逝的老屋（下）</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/18/3/23/n10243156.md#1">曾国藩家训 惠泽九代子孙</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/14/n11940493.md#1">许其正：捕乌鱼</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/8/n11924993.md#1">许其正：记实搭邮轮被冠状病毒随后紧追之旅</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/28/n11902821.md#1">不管怎样的哭法，我都准备好了</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/27/n11900138.md#1">绘梦乌石</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/21/n11886343.md#1">纪实散文：中国封城下的民生面面观（下）</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887113.md#1">越活越勇敢，我是朴末礼</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/18/n4483233.md#1">沉静:张充和的古典余韵</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/5/6/n7809092.md#1">沉静：粉墙黛瓦 远逝的老屋（上）</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/5/6/n7821474.md#1">沉静：粉墙黛瓦 远逝的老屋（下）</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/23/n10243156.md#1">曾国藩家训 惠泽九代子孙</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608205.md#1">珠玉比麟儿</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/21/n13594479.md#1">散落人间的文字：驴车爬上了来德山</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/1/28/n13535401.md#1">松街的故事之十二：从母亲准备的除夕年夜饭谈起</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/1/21/n13519920.md#1">台湾乡土文化——生养一代代人的石沪（二）</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/1/21/n13519456.md#1">松街的故事之十一：父亲的针线包</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/1/20/n13518480.md#1">散落人间的文字：伊在灯火阑珊处</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/19/4/16/n11190396.md#1">钟声：朋友，您可听到了历史的脚步声？</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/11/n10382929.md#1" target="_blank">共产暴政录：公私合营（工商改造）</a></li><li><a href="https://github.com/onzhi266/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/1/n11424700.md#1" target="_blank">罗兰：中共公安何以成公害</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/23/n10418231.md#1" target="_blank">晓明：一个枪口余生者的人生之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/4/n11363603.md#1" target="_blank">响彻在世界政坛的正义之声（上）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/29/n11905232.md#1">蝗虫群攻官府异象 为何吃尽画像人头？</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/28/n11903572.md#1">末代国君的风范 顺从天意的元惠宗</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/2/n11909596.md#1">【命理】什么样的女子能够旺夫？</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/26/n11898519.md#1">《圣经》启示 神因何宣泄愤怒？</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/18/n11950479.md#1">【新闻看点】川普连斥北京 中共防疫4大弊病</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/18/n11949692.md#1">【直播回放】3.18新肺炎追踪：实乃中共病毒</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11948263.md#1">【现场视频】武汉居民求助 官称：死你一个不少</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/16/n11945291.md#1">蓬佩奥与杨洁篪通话 正告北京勿散怪诞谣言</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测中共病毒</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/16/n11944768.md#1">疫情升温 该储备什么食品与用品？</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/14/n11940160.md#1">狗狗思念过世主人暴瘦 破例让它见最后一面</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/16/n11943647.md#1">10种咖啡新伴侣 咖啡美味升级又健康</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/16/n11944883.md#1">【胡乃文开讲】白粥治咳抗感冒！5种神奇食疗方 止咳很实用</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/15/n11942884.md#1">80%疾病都和脊椎有关？1动作揪出脊椎问题</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615078.md#1">刘凯文：香港抗疫政策混乱 遗体滞留急症室</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614595.md#1">【直播】俄乌大战 拜登首次国情咨文演说</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/onzhi266/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/onzhi266/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/11/22/n10868348.htm">奶奶的小圆子 爷爷的油纸伞</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/11/22/n10868348.htm">奶奶的小圆子 爷爷的油纸伞</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/onzhi266/djy/blob/master/gb/18/11/22/n10868348.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/onzhi266/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/onzhi266/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/onzhi266/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/18/11/22/n10868348.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
